--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -57,4 +57,14 @@
 		<location>/error500</location>
 	</error-page>
 	
+	<filter>
+  <filter-name>deviceResolverRequestFilter</filter-name>
+  <filter-class>org.springframework.mobile.device.DeviceResolverRequestFilter</filter-class>
+</filter>
+<filter-mapping>
+  <filter-name>deviceResolverRequestFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+</filter-mapping>
+
+	
 </web-app>
