--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.starlight</groupId>
+	<groupId>com.thearc</groupId>
 	<artifactId>web</artifactId>
-	<name>DgStarlightFestival</name>
+	<name>TheArc</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
@@ -265,7 +265,27 @@
 			<version>1.9.0</version>
 		</dependency>
 
-  
+        <!-- 유효성검증  -->
+<!-- 		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
+		</dependency> -->
+		
+		  <dependency>
+        <groupId>javax.validation</groupId> 
+        <artifactId>validation-api</artifactId> 
+        <version>1.0.0.GA</version> 
+    </dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator-annotation-processor</artifactId>
+			<version>4.1.0.Final</version>
+		</dependency>	
+
+			
+			
+		
 	</dependencies>
     <build>
     	<finalName>thearc</finalName>
@@ -311,8 +331,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java-version}</source>
+                    <target>${java-version}</target>
                     <compilerArgument>-Xlint:all</compilerArgument>
                     <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
