--- a/pom.xml
+++ b/pom.xml
@@ -272,11 +272,11 @@
 			<version>1.1.0.Final</version>
 		</dependency> -->
 		
-		  <dependency>
+		<!--   <dependency>
         <groupId>javax.validation</groupId> 
         <artifactId>validation-api</artifactId> 
         <version>1.0.0.GA</version> 
-    </dependency>
+    </dependency> -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator-annotation-processor</artifactId>
