--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,6 +47,10 @@
 	</filter-mapping>
 	
 	<error-page>
+		<error-code>400</error-code>
+		<location>/error400</location>
+	</error-page>
+	<error-page>
 		<error-code>404</error-code>
 		<location>/error404</location>
 	</error-page>
