--- a/pom.xml
+++ b/pom.xml
@@ -284,10 +284,15 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator-annotation-processor</artifactId>
 			<version>4.1.0.Final</version>
-		</dependency>	
+		</dependency>
 
-			
-			
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.0</version>
+			<scope>provided</scope>
+		</dependency>
 		
 	</dependencies>
     <build>
