--- a/pom.xml
+++ b/pom.xml
@@ -293,7 +293,14 @@
 			<version>1.18.0</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>2.7.4</version>
+		</dependency>
+
+
 	</dependencies>
     <build>
     	<finalName>thearc</finalName>
