--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,10 +3,21 @@
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:spring/root-context.xml
-				classpath:spring/security-context.xml
+				  classpath:spring/security-context.xml
 	</param-value>
   </context-param>
-  <listener>
+
+	<context-param>
+		<param-name>log4jConfigLocation</param-name>
+		<param-value>classpath:/log4j-${spring.profiles.active}.xml</param-value>
+	</context-param>
+
+	<listener>
+		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+	</listener>
+
+
+	<listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
   
@@ -15,7 +26,6 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <!-- <param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value> -->
       <param-value>classpath:spring/servlet-context.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
@@ -24,7 +34,9 @@
     <servlet-name>appServlet</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
-  
+
+
+
   	<filter>
 		<filter-name>hiddenHttpMethodFilter</filter-name>
 		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
@@ -84,6 +96,9 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-
+	<context-param>
+		<param-name>spring.profiles.active</param-name>
+		<param-value>server</param-value>
+	</context-param>
 
 </web-app>
