<<naver sns login dev application>> local - server 분리로 인한 client id, client secret분리(profile) , 중복 아이디 예외처리

--- a/src/main/resources/spring/setting.properties
+++ b/src/main/resources/spring/setting.properties
@@ -39,3 +39,15 @@ Server.UploadPath = ENC(mPrb6yY5u+vDcF8J79ej21Id+qqY0WJW2mifCMIgCGSdjveOjErEFw==
 
 # mailpw
 MailPw = ENC(h420KbabkMP9wSwdkPnV/ZEL2HmvK0iK)
+
+# naverClientId - local (sns\uB85C\uADF8\uC778\uC5F0\uB3D9\uAD00\uB828)
+Local.naverClientId = ENC(2NTrBRXuHJietUw2EFFOM6kZUP0MZJz2aOQbFMJHotc=)
+
+# naverSecret - local (sns\uB85C\uADF8\uC778\uC5F0\uB3D9\uAD00\uB828)
+Local.naverSecret = ENC(JgbZt9mSDKGD01Q2FOX1PRF4/fMBXhlp)
+
+# naverClientId - Server (sns\uB85C\uADF8\uC778\uC5F0\uB3D9\uAD00\uB828)
+Server.naverClientId = ENC(GzStO7MLMDT1F7QuuaM3BCiccezs3ng0zMeD3rTXQNo=)
+
+# naverSecret - Server (sns\uB85C\uADF8\uC778\uC5F0\uB3D9\uAD00\uB828)
+Server.naverSecret = ENC(wqOi8nB5K760dh3LRufOvEnYQpNT8OXS)
