--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
 		<java-version>1.8</java-version>
 		<org.springframework-version>4.3.21.RELEASE</org.springframework-version>
 		<org.springframework-security-version>4.2.10.RELEASE</org.springframework-security-version>
+<!--
+		<org.springframework-version>4.3.21.RELEASE</org.springframework-version>
+		<org.springframework-security-version>4.2.10.RELEASE</org.springframework-security-version>
+-->
 		<org.aspectj-version>1.9.0</org.aspectj-version>
 		<org.slf4j-version>1.7.25</org.slf4j-version>
 	</properties>
@@ -379,8 +383,6 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
 		</dependency>
-
-
 
 	</dependencies>
 	<build>
